# spring-mass-damper-ML

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  prometheus.yaml  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
dashboard/: app.py
model_registry/: README.md
model_registry/v1/: model.pt
src/spring_mass_damper_ML/: __init__.py  logging_conf.py
src/spring_mass_damper_ML/api/: main.py  schemas.py
src/spring_mass_damper_ML/data/: generator.py  loader.py
src/spring_mass_damper_ML/models/: physics_baseline.py  surrogate.py
src/spring_mass_damper_ML/pipelines/: train.py
src/spring_mass_damper_ML/test_client/: test_api_client_predict.py
src/spring_mass_damper_ML/utils/: io.py  timers.py
tests/: conftest.py  test_api.py  test_training.py
